--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <h4>
 <a id="王烁71112330---范宜臻71112311--电视部分" class="anchor" href="#%E7%8E%8B%E7%83%8171112330---%E8%8C%83%E5%AE%9C%E8%87%BB71112311--%E7%94%B5%E8%A7%86%E9%83%A8%E5%88%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>王烁（71112330）   范宜臻（71112311）  电视部分</h4>
-<h5><span>&nbsp;&nbsp;&nbsp;&nbsp;</span><a href="">了解我们</a><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><a href="">查看信息</a></h5>
+<h5><span>&nbsp;&nbsp;&nbsp;&nbsp;</span><a href="TV/introduce.xml">了解我们</a><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><a href="TV/tvprograme.xml">查看信息</a></h5>
 
 <h4>
 <a id="解鸿浩71112314-段逸轩71112103--电影部分" class="anchor" href="#%E8%A7%A3%E9%B8%BF%E6%B5%A971112314-%E6%AE%B5%E9%80%B8%E8%BD%A971112103--%E7%94%B5%E5%BD%B1%E9%83%A8%E5%88%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>解鸿浩（71112314） 段逸轩（71112103）  电影部分</h4>
