--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
       <div class="inner">
         <h1>WE_TEAM ’s web</h1>
         <h2>This is the web for the xml course</h2>
-        <a href="https://github.com/hdyycx/XMLCourse" class="button"><small>View project on</small> GitHub</a>
+        <svg xmlns="http://www.w3.org/2000/svg"> 
+          <polygon points="122 59,72 205,194 114,49 114,171 205"
+            style="fill-rule: nonzero; fill: #CFC; stroke: #000"/>
+          <text x="90" y="240" style="fill: #090; font-size: 16px">
+            WE_TEAM</text>
+        </svg>
       </div>
     </header>
 
