--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
@@ -19,15 +20,12 @@
 
   <body>
     <header>
-      <div class="inner">
-        <h1>WE_TEAM ’s web</h1>
-        <h2>This is the web for the xml course</h2>
-        <svg xmlns="http://www.w3.org/2000/svg"> 
-          <polygon points="122 59,72 205,194 114,49 114,171 205"
-            style="fill-rule: nonzero; fill: #CFC; stroke: #000"/>
-          <text x="90" y="240" style="fill: #090; font-size: 16px">
-            WE_TEAM</text>
-        </svg>
+      <div id="header">
+        <div class="inner" id="title">
+          <h1>WE_TEAM ’s web</h1>
+          <h2>This is the web for the xml course</h2>
+        </div>
+        <img id="logo" src="../homework/LOGO.svg" style="width:250px;height:250px;">
       </div>
     </header>
 
