--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1>WE_TEAM ’s web</h1>
           <h2>This is the web for the xml course</h2>
         </div>
-        <img id="logo" src="../homework/LOGO.svg" style="width:250px;height:250px;">
+        <img id="logo" src="images/LOGO.svg" style="width:250px;height:250px;">
       </div>
     </header>
 
